# react-native-nitro-torrent

./: .gitmodules  package-lock.json
TorrentExmaple/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
TorrentExmaple/__tests__/: App.test.tsx
TorrentExmaple/android/: settings.gradle
TorrentExmaple/android/app/: build.gradle
TorrentExmaple/android/app/src/main/java/com/torrentexmaple/: MainActivity.kt  MainApplication.kt
TorrentExmaple/android/app/src/main/res/values/: strings.xml
TorrentExmaple/ios/: Podfile
TorrentExmaple/ios/TorrentExmaple/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
TorrentExmaple/ios/TorrentExmaple.xcodeproj/: project.pbxproj
TorrentExmaple/ios/TorrentExmaple.xcodeproj/xcshareddata/xcschemes/: TorrentExmaple.xcscheme
react-native-nitro-torrent/: NitroTorrent.podspec  README.md  compile_commands.json  nitro.json  package.json
react-native-nitro-torrent/android/: CMakeLists.txt  build.gradle  gradle.properties
react-native-nitro-torrent/android/src/main/cpp/: CMakeLists.txt  cpp-adapter.cpp
react-native-nitro-torrent/android/src/main/java/com/margelo/nitro/nitrotorrent/: NitroTorrentPackage.kt
react-native-nitro-torrent/cpp/: HybridLibtorrent.cpp  HybridLibtorrent.hpp
react-native-nitro-torrent/ios/: Bridge.h
react-native-nitro-torrent/src/: index.ts
react-native-nitro-torrent/src/specs/: HybridTorrent.nitro.ts
